--- a/css/media/xs.css
+++ b/css/media/xs.css
@@ -1,10 +1,33 @@
 .menu{
     width: 100%;
-    height: 50px;
     background-color: #2b2b2b;
-}
-.slider{
-    width: 100%;
-    height: 500px;
-    background-color: green;
+    & nav{
+        width: inherit;
+        display: flex;
+        flex-flow: column wrap;
+        & div{
+            width: 100%;
+            height: 40px;
+            & a{
+                display: block;
+                width: 100%;
+                height: inherit;
+                text-align: center;
+                padding: 0 10px;
+                color: whitesmoke;
+                font-size: 12px;
+                font-weight: bold;
+                line-height: 40px;
+                text-decoration: none;
+                text-transform: capitalize;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+                border-radius: 5px;
+                transition: 300ms;
+                &:hover{
+                    background-color: deeppink;
+                }
+
+            }
+        }
+    }
 }
