--- a/css/media/md.css
+++ b/css/media/md.css
@@ -60,3 +60,53 @@
     height: 100%;
     object-fit: cover;
   }
+  .products {
+    width: 100%;
+    padding: 50px;
+    box-sizing: border-box;
+    background-color: #2b2b2b;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    column-gap: 10px;
+    .product {
+      width: 30%;
+      & h1 {
+        color: whitesmoke;
+        margin-bottom: 10px;
+        text-align: center;
+      }
+      & img {
+        width: 100%;
+        height: 300px;
+        margin-bottom: 10px;
+        object-fit: cover;
+      }
+      & a {
+        display: block;
+        width: 100px;
+        height: 30px;
+        line-height: 30px;
+        background-color: green;
+        color: whitesmoke;
+        text-decoration: none;
+        text-transform: capitalize;
+        text-align: center;
+        font-size: 13px;
+        font-weight: bold;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        border-radius: 5px;
+        transition: 300ms;
+        margin: 0 auto ;
+        &:hover {
+          background-color: darkorange;
+        }
+      }
+      & p {
+        color: whitesmoke;
+        font-size: 13px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+    }
+  }
