--- a/css/media/xxl.css
+++ b/css/media/xxl.css
@@ -1,58 +1,107 @@
-.menu{
-    width: 100%;
-    height: 40px;
-    background-color: #2b2b2b;
-    & nav{
-        width: inherit;
-        height: inherit;
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        & div{
-            width: fit-content;
-            height: inherit;
-            & a{
-                display: block;
-                width: fit-content;
-                padding: 0 10px;
-                color: whitesmoke;
-                font-size: 12px;
-                font-weight: bold;
-                line-height: 40px;
-                text-decoration: none;
-                text-transform: capitalize;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-                border-radius: 5px;
-                transition: 300ms;
-                &:hover{
-                    background-color: deeppink;
-                }
-
-            }
+.menu {
+  width: 100%;
+  height: 40px;
+  background-color: #2b2b2b;
+  & nav {
+    width: inherit;
+    height: inherit;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    & div {
+      width: fit-content;
+      height: inherit;
+      & a {
+        display: block;
+        width: fit-content;
+        padding: 0 10px;
+        color: whitesmoke;
+        font-size: 12px;
+        font-weight: bold;
+        line-height: 40px;
+        text-decoration: none;
+        text-transform: capitalize;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        border-radius: 5px;
+        transition: 300ms;
+        &:hover {
+          background-color: deeppink;
         }
+      }
     }
+  }
 }
-.slider{
-    width: 100%;
-    height: calc(100vh - 40px);
+.slider {
+  width: 100%;
+  height: calc(100vh - 40px);
 }
 .swiper {
-    width: 100%;
-    height: 100%;
-  }
+  width: 100%;
+  height: 100%;
+}
 
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.products {
+  width: 100%;
+  padding: 50px;
+  box-sizing: border-box;
+  background-color: #2b2b2b;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  column-gap: 10px;
+  .product {
+    width: 30%;
+    & h1 {
+      color: whitesmoke;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+    & img {
+      width: 100%;
+      height: 300px;
+      margin-bottom: 10px;
+      object-fit: cover;
+    }
+    & a {
+      display: block;
+      width: 100px;
+      height: 30px;
+      line-height: 30px;
+      background-color: green;
+      color: whitesmoke;
+      text-decoration: none;
+      text-transform: capitalize;
+      text-align: center;
+      font-size: 13px;
+      font-weight: bold;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      border-radius: 5px;
+      transition: 300ms;
+      margin: 0 auto ;
+      &:hover {
+        background-color: darkorange;
+      }
+    }
+    & p {
+      color: whitesmoke;
+      font-size: 13px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
   }
+}
